// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<tr
  className="src-shared-components-SubmissionManagement-Submission-___styles__submission-row___2yQOc"
>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__id-col___zC6Hi"
  >
    <span
      className="src-shared-components-SubmissionManagement-Submission-___styles__mobile-header___23v4J"
    >
      ID
    </span>
    <div
      className="src-shared-components-SubmissionManagement-Submission-___styles__v5-id___1W9Db"
    />
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__type-col___25OJ8"
  >
    <span
      className="src-shared-components-SubmissionManagement-Submission-___styles__mobile-header___23v4J"
    >
      TYPE
    </span>
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__date-col___3XOxK"
  >
    <span
      className="src-shared-components-SubmissionManagement-Submission-___styles__mobile-header___23v4J"
    >
      Submission Date
    </span>
    Invalid date
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__action-col___2M1RY"
  >
    <div>
      <button
        onClick={[Function]}
        type="button"
      />
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__expand-icon___TDY6Y src-shared-components-SubmissionManagement-Submission-___styles__expanded___8pRX_"
        onClick={[Function]}
        type="button"
      >
        <ExpandIcon
          fill="none"
          height="9"
          viewBox="0 0 16 9"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </td>
</tr>
`;

exports[`Snapshot match 2`] = `
<tr
  className="src-shared-components-SubmissionManagement-Submission-___styles__submission-row___2yQOc"
>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__id-col___zC6Hi"
  >
    <span
      className="src-shared-components-SubmissionManagement-Submission-___styles__mobile-header___23v4J"
    >
      ID
    </span>
    <div
      className="src-shared-components-SubmissionManagement-Submission-___styles__v5-id___1W9Db"
    >
      12345
    </div>
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__type-col___25OJ8"
  >
    <span
      className="src-shared-components-SubmissionManagement-Submission-___styles__mobile-header___23v4J"
    >
      TYPE
    </span>
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__date-col___3XOxK"
  >
    <span
      className="src-shared-components-SubmissionManagement-Submission-___styles__mobile-header___23v4J"
    >
      Submission Date
    </span>
    Invalid date
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__action-col___2M1RY"
  >
    <div>
      <button
        onClick={[Function]}
        type="button"
      />
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__expand-icon___TDY6Y"
        onClick={[Function]}
        type="button"
      >
        <ExpandIcon
          fill="none"
          height="9"
          viewBox="0 0 16 9"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </td>
</tr>
`;
